force-app/main/default/objects/TempKnoxApproval__c/TempKnoxApproval__c.object-meta.xml
<CustomObject>
    <label>Temp Knox Approval</label>
    <nameField>
        <label>Knox Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Knox Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>