force-app/main/default/objects/TempKnoxApproval__c/fields/ActivityId__c.field-meta.xml
<CustomField>
    <fullName>ActivityId__c</fullName>
    <label>Activity Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>