force-app/main/default/objects/TempKnoxApproval__c/fields/MISID__c.field-meta.xml
<CustomField>
    <fullName>MISID__c</fullName>
    <label>MISID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>