force-app/main/default/objects/TempKnoxApproval__c/fields/ObjAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjAPIName__c</fullName>
    <label>objAPIName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>