force-app/main/default/objects/TempKnoxApproval__c/fields/ObjRecordName__c.field-meta.xml
<CustomField>
    <fullName>ObjRecordName__c</fullName>
    <label>objRecordName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>