force-app/main/default/objects/TempKnoxApproval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-3</fullName>
                <label>암호화실패</label>
            </value>
            <value>
                <fullName>-2</fullName>
                <label>암호화중</label>
            </value>
            <value>
                <fullName>-1</fullName>
                <label>예약상신</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>보류</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>진행중</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>완결</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>반려</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>상신취소</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>전결</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>후완결</label>
            </value>
            <value>
                <fullName>-4</fullName>
                <isActive>false</isActive>
                <label>-4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>