force-app/main/default/objects/TempKnoxApproval__c/fields/TemplateName__c.field-meta.xml
<CustomField>
    <fullName>TemplateName__c</fullName>
    <label>Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>